[tool.poetry]
name = "telegram-font-styling-bot"
version = "1.0.0"
description = "A Telegram bot for text styling with various fonts and effects"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.7"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 